# PocketOps

./: .editorconfig  .gitattributes  .gitignore  Bug_Reporting_Guide.md  DEMO_VIDEO_SCRIPT.md  DEVELOPMENT.md  Function_Calling_Guide.md  POCKETOPS_SERVER_INTEGRATION_SPEC.md  README.md  model_allowlist.json
Android/: README.md
Android/src/: build.gradle.kts  settings.gradle.kts
Android/src/app/: build.gradle.kts
Android/src/app/libs/: qtld-release.aar
Android/src/app/src/main/: AndroidManifest.xml
Android/src/app/src/main/assets/maintenance/: graph_viz.html  knowledge_graph.json
Android/src/app/src/main/cpp/: CMakeLists.txt  genie_jni.cpp
Android/src/app/src/main/res/values/: strings.xml  themes.xml
Android/src/app/src/main/res/xml/: file_paths.xml
Android/src/gradle/: libs.versions.toml
artifacts/checkpoints/video-inspection-2026-05-13-1346/: PocketOpsActivity.kt  README.md  app-build.gradle.kts
artifacts/final_ppt/npu_htp/: npu_htp_evidence_summary.json  系统日志.txt
artifacts/html_to_ppt/pocketops_deck/: pocketops-deck-converted.pptx
artifacts/html_to_ppt/pocketops_deck/slides_html/: slide_01.html  slide_02.html  slide_03.html  slide_04.html  slide_05.html  slide_06.html  slide_07.html  slide_08.html  slide_09.html  slide_10.html  slide_11.html  slide_12.html
demo/: README.md  mock_pocketops_server.py
design/: pocketops_codesign_template.html
docs/final/: DEMO_VIDEO_SCRIPT.md  FINAL_PPT_CONTENT.md
docs/project/: POCKETOPS_SERVER_INTEGRATION_SPEC.md
model_allowlists/: README.md
skills/: README.md
(+32 files in other folders)
